# newt

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
scripts/: run-tauri.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  debug.rs  file_index.rs  formatter.rs  fs_ops.rs  git_ops.rs  logo.rs  mod.rs  processes.rs  pty.rs  search.rs  shells.rs  watcher.rs  worktree.rs
src-tauri/src/debug/: mod.rs  registry.rs  session.rs  transport.rs  types.rs
src/lib/activity-bar/: ActivityBar.svelte
src/lib/common/: ContextMenu.svelte  NamePrompt.svelte  Splitter.svelte
src/lib/debug/: debug-client.ts  debug-store.ts
src/lib/editor/: Breadcrumbs.svelte  Editor.svelte  EditorTabs.svelte  ImageView.svelte  goto.ts  languages.ts  open-file.ts  tabs-store.ts  theme.ts
src/lib/filetree/: FileTree.svelte  TreeItem.svelte  file-icons.ts  tree-store.svelte.ts
src/lib/footer/: Footer.svelte
src/lib/git/: DiffView.svelte  GitPanel.svelte  git-store.ts
src/lib/keybindings/: KeybindingRecorder.svelte  keybinding-store.ts
src/lib/markdown/: MarkdownPreview.svelte
src/lib/menu/: AppMenu.svelte  WindowControls.svelte
src/lib/palette/: CommandPalette.svelte  OutlinePalette.svelte  fuzzy.ts  palette-store.ts  symbols.ts
src/lib/processes/: ProcessesPanel.svelte
src/lib/recent/: recent.ts
src/lib/search/: SearchPanel.svelte
(+14 files in other folders)
